# tracy

./: .gitignore  CMakeLists.txt  tracy.code-workspace
common/: common.files  server.files  zstd-asm.files  zstd.files
profiler/: CMakeLists.txt  CMakeSettings.json  meson.build  meson.options  vcpkg.ini
profiler/src/: BackendWayland.cpp
public/tracy/: TracyVulkan.hpp
