option('no-fileselector', type: 'boolean', value: false, description: 'Disable the file selector')
option('gtk-fileselector', type: 'boolean', value: false, description: 'Use the GTK file selector on Linux instead of the xdg-portal one')
option('legacy', type: 'boolean', value: false, description: 'Instead of Wayland, use the legacy X11 backend on Linux')
